--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,6 +4,6 @@
 body{
     
     // color: white; 
-    background-image: linear-gradient(to top, #12FFF7 0%, #B3FFAB 100%);
+    background-image: linear-gradient(to top, $celeste 0%, $verde 100%);
     min-height: 100vh; /*para que no desconfigure el gradient*/
 }
