tres metodos de busqueda por DOM

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,3 +8,9 @@ body{
     background-image: linear-gradient(to top, $celeste 0%, $verde 100%);
     min-height: 100vh; /*para que no desconfigure el gradient*/
 }
+
+
+
+
+
+@import "_busqueda";
