--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -11990,5 +11991,19 @@ body {
   background-image: linear-gradient(to top, #12FFF7 0%, #B3FFAB 100%);
   min-height: 100vh;
   /*para que no desconfigure el gradient*/
+}
+
+/* ************************************ */
+/* inicio de Scss de la página busqueda */
+/* ************************************ */
+.force {
+  height: 100%;
+  min-height: 300px;
+  max-width: 95%;
+}
+
+.found {
+  max-width: 100%;
+  min-width: 25rem;
 }
 /*# sourceMappingURL=styles.css.map */
