--- a/scss/_busqueda.scss
+++ b/scss/_busqueda.scss
@@ -9,7 +9,13 @@
     max-width: 95%;
 }
 
+.form_edit_modifed{
+    min-width: 30rem;
+    max-width:100%;
+
+}
+
 .found {
 max-width: 100%;
-min-width: 25rem;
+min-width: 26rem;
 }
