--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -51,7 +51,7 @@ $tik: #ff0050;
 
 
 .glass-celesty-card{ 
-    background: $celesty;
+    background-color: $celesty;
     @include glass;
     border-radius: 10px;
     border: 1px solid $border;
@@ -59,7 +59,7 @@ $tik: #ff0050;
 }
 
 .glass-greenty-card{ 
-    background: $greenty;
+    background-color: $greenty;
     @include glass;
     border-radius: 10px;
     border: 1px solid $border;
