--- a/css/styles.css
+++ b/css/styles.css
@@ -8760,7 +8760,7 @@ fieldset:disabled .btn {
 }
 
 /* rtl:end:remove */
-.text-primary {
+.text-primary, .label {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
 }
@@ -11985,12 +11985,33 @@ de redes sociales*/
   border: 1px solid rgba(255, 255, 255, 0.25);
 }
 
+.glass-snow {
+  background-color: rgba(239, 233, 233, 0.3);
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
 /* color para utilizar con los hovers*/
 body {
   background-image: -webkit-gradient(linear, left bottom, left top, from(#12FFF7), to(#B3FFAB));
   background-image: linear-gradient(to top, #12FFF7 0%, #B3FFAB 100%);
   min-height: 100vh;
   /*para que no desconfigure el gradient*/
+}
+
+.section_edit {
+  max-width: 95%;
+  width: 100%;
+}
+
+.form_edit {
+  max-width: 23rem;
+  width: 100%;
+  height: 46rem;
 }
 
 /* ************************************ */
