--- a/scss/_enrolamiento.scss
+++ b/scss/_enrolamiento.scss
@@ -8,6 +8,13 @@
 .form_edit{
     max-width: 23rem;
     width: 100%;
-    height: 38rem;
+    height: 46rem;
 
 }
+.label{
+    @extend .text-primary;
+}
+//para mantener la ventana modal cerrada
+
+
+
