--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -17,7 +17,7 @@ $celeste:#12FFF7;
 $greenty: rgba( 179, 255, 171, 0.25 );
 $verde:#B3FFAB;
 
-
+$snow:rgba( 239, 233, 233, 0.3 );
 
 /* tetrade de colores */
 
@@ -63,6 +63,13 @@ $tik: #ff0050;
     @include glass;
     border-radius: 10px;
     border: 1px solid $border;
+}
+
+.glass-snow{
+    background-color:$snow;
+    @include glass;
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 /* color para utilizar con los hovers*/
