--- a/scss/_enrolamiento.scss
+++ b/scss/_enrolamiento.scss
@@ -13,8 +13,17 @@
 }
 .label{
     @extend .text-primary;
+    
 }
-//para mantener la ventana modal cerrada
 
 
+.form_edit2{
+    text-align: left;   
+    max-width: 23rem;
+    width: 100%;
+    height: 100%;
+    @extend .p-3;
+    @extend .my-2;
+    @extend .glass-greenty-card;
+} 
 
