--- a/css/styles.css
+++ b/css/styles.css
@@ -12039,4 +12039,28 @@ body {
   max-width: 100%;
   min-width: 26rem;
 }
+
+.menu {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid #fff;
+  border-top: 1px solid #fff;
+  padding: 0.5rem;
+  margin-left: 0,5rem;
+}
+
+.menu a.active_label, .menu a:hover {
+  background-color: #FFCDAB;
+  border: .7px solid #fff;
+  -webkit-transition: .5;
+  transition: .5;
+}
+
+@media (max-width: 768px) {
+  /*medida de tablet */
+  /* agrea una capa de fondo trasparente a los 
+    links del menu desplegable para tener un poco
+    mas de contraste en dispositivos mobiles
+    and tablests */
+}
 /*# sourceMappingURL=styles.css.map */
