--- a/scss/_enrolamiento.scss
+++ b/scss/_enrolamiento.scss
@@ -2,13 +2,16 @@
 
 .section_edit{
     max-width: 95%;
-    width: 100%
+    width: 100%;
+    height:100%;
 }
 
 .form_edit{
     max-width: 23rem;
     width: 100%;
-    height: 46rem;
+    height: 100%;
+    max-height: 70rem;
+    
 
 }
 .label{
@@ -22,6 +25,7 @@
     max-width: 23rem;
     width: 100%;
     height: 100%;
+    max-height: 100rem;
     @extend .p-3;
     @extend .my-2;
     @extend .glass-greenty-card;
