--- a/src/styles.css
+++ b/src/styles.css
@@ -12006,12 +12006,14 @@ body {
 .section_edit {
   max-width: 95%;
   width: 100%;
+  height: 100%;
 }
 
 .form_edit {
   max-width: 23rem;
   width: 100%;
-  height: 46rem;
+  height: 100%;
+  max-height: 70rem;
 }
 
 .form_edit2 {
@@ -12019,6 +12021,7 @@ body {
   max-width: 23rem;
   width: 100%;
   height: 100%;
+  max-height: 100rem;
 }
 
 /* ************************************ */
