--- a/src/styles.css
+++ b/src/styles.css
@@ -11996,6 +11996,12 @@ de redes sociales*/
 }
 
 /* color para utilizar con los hovers*/
+.orange-button {
+  background-color: #FFCDAB;
+  border: .7px solid #fff;
+  border-radius: 10px;
+}
+
 body {
   background-image: -webkit-gradient(linear, left bottom, left top, from(#12FFF7), to(#B3FFAB));
   background-image: linear-gradient(to top, #12FFF7 0%, #B3FFAB 100%);
@@ -12013,7 +12019,7 @@ body {
   max-width: 23rem;
   width: 100%;
   height: 100%;
-  max-height: 70rem;
+  max-height: 75rem;
 }
 
 .form_edit2 {
